# screenoff

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  installer.iss  screenoff_config.json
.github/: copilot-instructions.md
.github/workflows/: build-installer.yml  build.yml  release.yml
src/: config.rs  main.rs  monitors.rs  tray.rs
