[package]
name = "screenoff"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wmi = "0.13"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Com", "Win32_System_Wmi", "Win32_System_Ole", "Win32_System_Variant", "Win32_System_Rpc", "Win32_Security_Authorization", "Win32_Devices", "Win32_Devices_DeviceAndDriverInstallation"] }
