[package]
name = "screenoff"
version = "0.1.0"
edition = "2021"
authors = ["M Zidane"]
license = "GPL-3.0-or-later"
description = "A Windows tray application to toggle secondary monitors on/off"

[package.metadata]
app_id = "dev.zidane.screenoff"

[build-dependencies]
winres = "0.1"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wmi = "0.13"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_UI_HiDpi", "Win32_UI_Controls", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Com", "Win32_System_Wmi", "Win32_System_Ole", "Win32_System_Variant", "Win32_System_Rpc", "Win32_System_Registry", "Win32_Security_Authorization", "Win32_Devices", "Win32_Devices_DeviceAndDriverInstallation"] }
