[package]
name = "screenoff"
version = "0.1.0"
edition = "2021"
authors = ["M Zidane"]
license = "GPL-3.0-or-later"
description = "A Windows tray application to toggle secondary monitors on/off"

[package.metadata]
app_id = "dev.zidane.screenoff"

[build-dependencies]
winres = "0.1"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_UI_HiDpi", "Win32_UI_Controls", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Registry", "Win32_Devices_Display", "Win32_System_Threading", "Win32_Security"] }
